[gd_scene load_steps=32 format=2]

[ext_resource path="res://roaming_pov/images/cone_of_vision.png" type="Texture" id=1]
[ext_resource path="res://roaming_pov/roaming_pov.gd" type="Script" id=2]
[ext_resource path="res://roaming_pov/images/arrow_grey_left.png" type="Texture" id=3]
[ext_resource path="res://roaming_pov/images/arrow_purple_up.png" type="Texture" id=4]
[ext_resource path="res://roaming_pov/images/arrow_grey_right.png" type="Texture" id=5]
[ext_resource path="res://roaming_pov/images/arrow_purple_down.png" type="Texture" id=6]
[ext_resource path="res://roaming_pov/images/arrow_blue_down.png" type="Texture" id=7]
[ext_resource path="res://roaming_pov/images/arrow_purple_right.png" type="Texture" id=8]
[ext_resource path="res://roaming_pov/images/arrow_purple_left.png" type="Texture" id=9]
[ext_resource path="res://roaming_pov/images/arrow_blue_left.png" type="Texture" id=10]
[ext_resource path="res://roaming_pov/images/crossroads.png" type="Texture" id=11]
[ext_resource path="res://roaming_pov/images/arrow_grey_down.png" type="Texture" id=12]
[ext_resource path="res://roaming_pov/images/arrow_grey_up.png" type="Texture" id=13]
[ext_resource path="res://roaming_pov/images/arrow_blue_up.png" type="Texture" id=14]
[ext_resource path="res://roaming_pov/images/arrow_blue_right.png" type="Texture" id=15]
[ext_resource path="res://roaming_pov/TransitionScreen.tscn" type="PackedScene" id=16]
[ext_resource path="res://roaming_pov/maps/sewer_map.png" type="Texture" id=17]
[ext_resource path="res://roaming_pov/PartyMember.tscn" type="PackedScene" id=18]
[ext_resource path="res://sound_streams/AudioStreamPlayer.tscn" type="PackedScene" id=19]
[ext_resource path="res://addons/mixing-desk/sound/nonspatial/ran_cont.gd" type="Script" id=20]
[ext_resource path="res://roaming_pov/PartyContainer.gd" type="Script" id=21]
[ext_resource path="res://images/gui_boundary.png" type="Texture" id=22]
[ext_resource path="res://roaming_pov/sounds/tile_footsteps_3.wav" type="AudioStream" id=23]
[ext_resource path="res://roaming_pov/sounds/tile_footsteps_2.wav" type="AudioStream" id=24]
[ext_resource path="res://roaming_pov/sounds/tile_footsteps_1.wav" type="AudioStream" id=25]
[ext_resource path="res://roaming_pov/sounds/tile_footsteps_4.wav" type="AudioStream" id=26]
[ext_resource path="res://roaming_pov/InvSlot.tscn" type="PackedScene" id=27]
[ext_resource path="res://roaming_pov/Inventory.gd" type="Script" id=28]
[ext_resource path="res://images/map_boundary.png" type="Texture" id=29]
[ext_resource path="res://roaming_pov/sounds/footsteps_wet_1.wav" type="AudioStream" id=30]
[ext_resource path="res://roaming_pov/sounds/footsteps_wet_3.wav" type="AudioStream" id=31]

[node name="HBoxContainer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2880.0
rect_min_size = Vector2( 960, 0 )
mouse_filter = 2
size_flags_stretch_ratio = 5.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 15.0
margin_bottom = 2160.0
rect_min_size = Vector2( 15, 0 )
texture = ExtResource( 22 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 19.0
margin_right = 960.0
margin_bottom = 2160.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 941.0

[node name="MapHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 941.0
margin_bottom = 730.0
custom_constants/separation = 34

[node name="Control" type="Control" parent="VBoxContainer/MapHBox"]
margin_bottom = 700.0

[node name="MapBoundary" type="TextureRect" parent="VBoxContainer/MapHBox"]
margin_left = 34.0
margin_right = 907.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 700 )
size_flags_horizontal = 3
texture = ExtResource( 29 )
expand = true

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/MapHBox/MapBoundary"]
margin_left = 44.0
margin_top = 45.0
margin_right = 819.0
margin_bottom = 654.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="VBoxContainer/MapHBox/MapBoundary/ViewportContainer"]
size = Vector2( 775, 609 )
handle_input_locally = false
render_target_update_mode = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MapHBox/MapBoundary/ViewportContainer/Viewport"]
margin_right = 3000.0
margin_bottom = 2005.0
mouse_filter = 2
texture = ExtResource( 17 )

[node name="CharRect" type="TextureRect" parent="VBoxContainer/MapHBox/MapBoundary/ViewportContainer/Viewport/TextureRect"]
margin_left = 1600.0
margin_top = 926.0
margin_right = 1665.0
margin_bottom = 996.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 32.5, 35 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/MapHBox/MapBoundary/ViewportContainer/Viewport/TextureRect"]
position = Vector2( 1500, 600 )
rotation = 0.698132
current = true
zoom = Vector2( 0.75, 0.75 )
smoothing_enabled = true
smoothing_speed = 7.0

[node name="Control2" type="Control" parent="VBoxContainer/MapHBox"]
margin_left = 941.0
margin_right = 941.0
margin_bottom = 700.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 760.0
margin_right = 941.0
margin_bottom = 1010.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 941.0
margin_bottom = 250.0
custom_constants/separation = 34

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_bottom = 250.0

[node name="Inventory" type="GridContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 907.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/vseparation = 20
custom_constants/hseparation = 59
columns = 3
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inv1" parent="VBoxContainer/MarginContainer/HBoxContainer/Inventory" instance=ExtResource( 27 )]

[node name="Inv2" parent="VBoxContainer/MarginContainer/HBoxContainer/Inventory" instance=ExtResource( 27 )]
margin_left = 309.0
margin_right = 559.0

[node name="Inv3" parent="VBoxContainer/MarginContainer/HBoxContainer/Inventory" instance=ExtResource( 27 )]
margin_left = 618.0
margin_right = 868.0

[node name="Control2" type="Control" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 941.0
margin_right = 941.0
margin_bottom = 250.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1040.0
margin_right = 941.0
margin_bottom = 1863.0
hint_tooltip = "Show on hover"
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Placeholder" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 55.0
margin_bottom = 823.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 882.0
margin_bottom = 823.0
columns = 3

[node name="Placeholder" type="Control" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_right = 256.0
margin_bottom = 256.0

[node name="UpButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 260.0
margin_right = 563.0
margin_bottom = 256.0
mouse_filter = 1
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 13 )

[node name="Placeholder2" type="Control" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 567.0
margin_right = 823.0
margin_bottom = 256.0

[node name="LeftButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 260.0
margin_right = 256.0
margin_bottom = 563.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 3 )

[node name="Placeholder3" type="TextureRect" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 260.0
margin_top = 260.0
margin_right = 563.0
margin_bottom = 563.0
texture = ExtResource( 11 )
expand = true

[node name="RightButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 567.0
margin_top = 260.0
margin_right = 823.0
margin_bottom = 563.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 5 )

[node name="Placeholder4" type="Control" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 567.0
margin_right = 256.0
margin_bottom = 823.0

[node name="DownButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 260.0
margin_top = 567.0
margin_right = 563.0
margin_bottom = 823.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 12 )

[node name="Placeholder5" type="Control" parent="VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 567.0
margin_top = 567.0
margin_right = 823.0
margin_bottom = 823.0

[node name="Placeholder2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 886.0
margin_right = 941.0
margin_bottom = 823.0
size_flags_horizontal = 3

[node name="PartyContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1893.0
margin_right = 941.0
margin_bottom = 2130.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 120
script = ExtResource( 21 )

[node name="Control" type="Control" parent="VBoxContainer/PartyContainer"]
margin_bottom = 237.0

[node name="Amelie" parent="VBoxContainer/PartyContainer" instance=ExtResource( 18 )]
margin_left = 120.0
margin_right = 450.0
margin_bottom = 237.0
rect_min_size = Vector2( 330, 0 )

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 2160.0
margin_right = 941.0
margin_bottom = 2160.0

[node name="TransitionScreen" parent="." instance=ExtResource( 16 )]

[node name="TransitionScreenTexture" parent="." instance=ExtResource( 16 )]

[node name="TileFootstepsStream" parent="." instance=ExtResource( 19 )]
sound_files = [ "res://roaming_pov/sounds/tile_footsteps_1.wav", "res://roaming_pov/sounds/tile_footsteps_2.wav", "res://roaming_pov/sounds/tile_footsteps_3.wav", "res://roaming_pov/sounds/tile_footsteps_4.wav" ]

[node name="TileFootsteps" type="Node" parent="."]
script = ExtResource( 20 )
volume_range = 10.0
pitch_range = 0.3
sound_number = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TileFootsteps"]
stream = ExtResource( 25 )
volume_db = -20.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="TileFootsteps"]
stream = ExtResource( 24 )
volume_db = -20.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="TileFootsteps"]
stream = ExtResource( 23 )
volume_db = -20.0

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="TileFootsteps"]
stream = ExtResource( 26 )
volume_db = -20.0

[node name="WetFootsteps" type="Node" parent="."]
script = ExtResource( 20 )
volume_range = 10.0
pitch_range = 0.3
sound_number = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="WetFootsteps"]
stream = ExtResource( 30 )
volume_db = -17.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="WetFootsteps"]
stream = ExtResource( 31 )
volume_db = -17.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="WetFootsteps"]
stream = ExtResource( 31 )
volume_db = -17.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
[connection signal="transitioned" from="TransitionScreenTexture" to="." method="_on_TransitionScreenTexture_transitioned"]
